--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,25 @@ h3 {
     font-size: 50px;
 }
 
+.artist-button {
+    background-color: grey;
+    color: white;
+    padding: 15px 32px;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border: 4px solid white;
+}
+.artist-button:hover {
+    color: white;
+    border-radius: 50px;
+    border-color: white;
+    transition: all 0.3s ease 0s;
+    }
+
 .bio {
     font-size: 20px;
     font-weight: bold;
@@ -64,3 +83,7 @@ h3 {
 .content-hide {
     display: none;
 }
+
+@media screen and (max-width: 1024px) { .navbar-menu {
+    display: flex;
+} }
